# STAR-Searcher

./: .gitignore  README.md
Star-Searcher/: .gitignore  README.md  start_FUAE.sh
Star-Searcher/apriltag/: model.config  model.sdf
Star-Searcher/apriltag/materials/scripts/: aruco.material
Star-Searcher/apriltag_ros/apriltag_ros/: CMakeLists.txt
Star-Searcher/apriltag_ros/apriltag_ros/config/: tags.yaml
Star-Searcher/apriltag_ros/apriltag_ros/launch/: continuous_detection.launch  tracker.launch
Star-Searcher/apriltag_ros/apriltag_ros/src/: common_functions.cpp  tag_camera2world.cpp
Star-Searcher/fuae-planner/fuel_planner/active_perception/: CMakeLists.txt
Star-Searcher/fuae-planner/fuel_planner/bspline/: CMakeLists.txt
Star-Searcher/fuae-planner/fuel_planner/bspline_opt/: CMakeLists.txt
Star-Searcher/fuae-planner/fuel_planner/exploration_manager/: package.xml
Star-Searcher/fuae-planner/fuel_planner/fuae_gazebo/: CMakeLists.txt  package.xml
Star-Searcher/fuae-planner/fuel_planner/fuae_gazebo/include/: poly_controller_node.h  position_controller_node.h
Star-Searcher/fuae-planner/fuel_planner/fuae_gazebo/resource/: ardrone.yaml  iris.yaml  lee_controller_ardrone.yaml  lee_controller_iris.yaml  log_pid_ardrone.yaml  log_pid_iris.yaml
Star-Searcher/fuae-planner/fuel_planner/fuae_gazebo/rviz/: default.rviz
Star-Searcher/fuae-planner/fuel_planner/fuae_gazebo/urdf/: _d435.gazebo.xacro  _d435.urdf.xacro  bounce_mav.urdf
Star-Searcher/fuae-planner/fuel_planner/fuae_gazebo/worlds/: MAP2.world
Star-Searcher/fuae-planner/fuel_planner/path_searching/: CMakeLists.txt
Star-Searcher/fuae-planner/fuel_planner/plan_env/: package.xml
Star-Searcher/fuae-planner/uav_simulator/local_sensing/: CMakeLists.txt
Star-Searcher/gazebo_map_generator/: CMakeLists.txt  package.xml
Star-Searcher/gazebo_map_generator/src/: random_obstacle.cpp
Star-Searcher/mav_comm/mav_msgs/: CMakeLists.txt  package.xml
Star-Searcher/mav_comm/mav_msgs/cmake/: export_flags.cmake
Star-Searcher/rotors_simulator/rotors_control/: CMakeLists.txt
Star-Searcher/rotors_simulator/rotors_description/urdf/: VLP-16.urdf.xacro  ardrone.xacro  component_snippets.xacro
Star-Searcher/rotors_simulator/rotors_gazebo/: CMakeLists.txt
Star-Searcher/rotors_simulator/rotors_gazebo/launch/: helloworld.launch  mav_hovering_example.launch  mav_with_waypoint_publisher.launch  spawn_mav.launch
Star-Searcher/rotors_simulator/rotors_gazebo/resource/: hummingbird.yaml  iris.yaml  lee_controller_iris.yaml
Star-Searcher/rotors_simulator/rotors_gazebo/src/: hovering_example.cpp
Star-Searcher/rotors_simulator/rotors_gazebo_plugins/: CMakeLists.txt
Star-Searcher/search_planner/search_planner/exploration_manager/: CMakeLists.txt
Star-Searcher/search_planner/search_planner/plan_env/: CMakeLists.txt
Star-Searcher/search_planner/search_planner/plan_manage/: CMakeLists.txt
Star-Searcher/search_planner/search_planner/poly_traj/: CMakeLists.txt
Star-Searcher/search_planner/search_planner/traj_utils/: CMakeLists.txt
Star-Searcher/search_planner/uav_simulator/map_generator/: CMakeLists.txt
(+76 files in other folders)
